--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
          <h1 class="logo"><a href="/">{{ site.title }}</a></h1>
          <nav class="nav-collapse">
              <ul class="noList">
-                 <li> <a href="https://github.com/brianmaierjr/long-haul" target="_blank">GitHub</a></li>
+                 <li> <a href="https://github.com/hwstage" target="_blank">My GitHub</a></li>
              </ul>
          </nav>
      </div>
