--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,6 +33,22 @@ layout: default
   </footer>
 </article>
 
-{%- if site.disqus.shortname -%}
-  {%- include disqus_comments.html -%}
+{%- if page.comments -%}
+<h2>Comments</h2>
+<div id="disqus_thread"></div>
+<script>
+  let PAGE_URL = "{{site.url}}{{page.url}}"
+  let PAGE_IDENTIFIER = "{{page.url}}"
+  var disqus_foncig = function() {
+  this.page.url = PAGE_URL;
+  this.page.identifier = PAGE_IDENTIFIER;
+  };
+  (function() {
+  var d = document, s = d.createElement('script');
+  s.src = 'https://hwstage.disqus.com/embed.js';
+  s.setAttribute('data-timestamp', +new Date());
+  (d.head || d.body).appendChild(s);
+  })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>   
 {%- endif -%}
